# platypusgit

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.e2e  README.md  docker-compose.e2e.yml  features.md  implemented-features.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/skills/e2e-testing/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: e2e.yml  release.yml  site.yml
docs/superpowers/plans/: 2026-04-21-platypusgit-scaffold.md  2026-04-22-platypusgit-write-path-phase1.md  2026-04-22-ux-polish-batch-1.md  2026-04-23-commit-graph-layout.md  2026-04-23-reflog-viewer.md  2026-04-23-wire-up-placeholders.md  2026-04-24-centralized-branch-ui.md  2026-04-24-native-titlebar.md  2026-06-28-marketing-site.md  2026-06-29-command-palette.md  2026-06-29-commit-recents-signoff.md  2026-06-30-command-palette-actions.md  2026-06-30-keyboard-navigation.md  2026-07-02-e2e-phase2.md  2026-07-02-e2e-testing-phase1.md  2026-07-03-e2e-phase3.md  2026-07-03-multi-file-select.md  2026-07-03-ref-scoped-log.md  2026-07-06-keymap-power-shortcuts.md  2026-07-07-cli-launch.md  2026-07-07-merge-resolver-window.md  2026-07-08-history-inline-commit-diff.md  2026-07-08-multi-select-commits.md  2026-07-08-update-prompt.md
docs/superpowers/specs/: 2026-04-21-platypusgit-scaffold-design.md  2026-04-23-commit-graph-layout-design.md  2026-04-23-reflog-viewer-design.md  2026-04-24-centralized-branch-ui-design.md  2026-04-24-native-titlebar-design.md  2026-06-28-marketing-site-design.md  2026-06-29-command-palette-design.md  2026-06-29-commit-recents-signoff-design.md  2026-06-30-command-palette-actions-design.md  2026-06-30-keyboard-navigation-design.md  2026-07-02-e2e-phase2-design.md  2026-07-02-e2e-testing-design.md  2026-07-02-keyboard-navigation-v2-design.md  2026-07-03-e2e-phase3-design.md  2026-07-03-multi-file-select-design.md  2026-07-03-ref-scoped-log-design.md  2026-07-06-keymap-power-shortcuts-design.md  2026-07-07-cli-launch-design.md  (+4 more)
e2e/: docker-entrypoint.sh  e2e-docker.sh  tsconfig.json  wdio.conf.ts
e2e/specs/: branches.e2e.ts  commit.e2e.ts  harness.e2e.ts  history-diff.e2e.ts  history-ops.e2e.ts  keyboard-shortcuts.e2e.ts  keymap.e2e.ts  merge-conflict.e2e.ts  merge-window.e2e.ts  palette.e2e.ts  rebase.e2e.ts  reflog.e2e.ts  remote.e2e.ts  settings.e2e.ts  smoke.e2e.ts  stash.e2e.ts  status-stage.e2e.ts  update.e2e.ts
e2e/support/: app.ts  tempRepo.ts
site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
src/: App.tsx  AppShell.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  error.rs  lib.rs  main.rs  state.rs  update.rs
src-tauri/src/commands/: branches.rs  cli.rs  commits.rs  conflict.rs  diff.rs  history.rs  mod.rs  rebase.rs  reflog.rs  repo.rs  stash.rs  update.rs
src-tauri/src/git/: cli.rs  libgit2.rs  mod.rs  signature.rs  types.rs
src-tauri/tests/: blame.rs  branches_tags.rs  broken_head.rs  browse_tree_at_rev.rs  cherry_pick_revert.rs  commits_since.rs  conflict.rs  diff_commit.rs  diff_commits_revspec.rs  discard_reset.rs  embedded_repo.rs  file_history.rs  gitignore.rs  hunks.rs  libgit2_smoke.rs  log_filter.rs  log_ref.rs  network.rs  rebase.rs  reflog.rs  stage_commit.rs  stash.rs  stash_branch.rs  status_stats.rs  update.rs
src-tauri/tests/support/: fs.rs  mod.rs
src/design/: chrome.test.tsx  chrome.tsx  context-menu.tsx  empty-state.tsx  git-components.tsx  icons.tsx  index.ts  logo.test.tsx  logo.tsx  primitives.tsx  resizable.tsx  ui-helpers.tsx  use-prevent-browser-context-menu.ts  window-controls.test.tsx  window-controls.tsx
src/lib/: derive.ts  errors.ts  highlight.ts  platform.test.ts  platform.ts  recents.ts  selection.test.ts  selection.ts  tauri.ts  tree.test.ts  tree.ts  types.ts
src/screens/: Blame.tsx  Branches.tsx  CommitDiff.tsx  CommitPanel.keyboard.test.tsx  CommitPanel.test.tsx  CommitPanel.tsx  Conflict.launcher.test.tsx  Conflict.tsx  DiffViewer.tsx  FileHistory.tsx  History.diff.test.tsx  History.keyboard.test.tsx  History.multiselect.test.tsx  History.tsx  Rebase.test.tsx  Rebase.tsx  Reflog.tsx  Remote.tsx  RepoBrowser.test.tsx  RepoBrowser.tsx  Settings.cli.test.tsx  Settings.tsx  Welcome.test.tsx  Welcome.tsx  recentCommitMessages.test.ts
src/test/: dialogMock.ts  eventMock.ts  invokeMock.ts  setup.ts
(+109 files in other folders)
