[package]
name = "platypusgit"
version = "0.1.0"
description = "A cross-platform, developer-focused git desktop app built with Tauri 2 + React."
authors = ["Jonas Aasberg <jonas.aasberg@clave.no>"]
license = "GPL-3.0-only"
repository = "https://github.com/jonasaasberg/platypusgit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "platypusgit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20.4"
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-os = "2"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "process"] }
tauri-plugin-log = "2.8.0"
log = "0.4.29"

[dev-dependencies]
tempfile = "3"

