[package]
name = "platypusgit"
version = "0.0.0"
description = "A cross-platform, developer-focused git desktop app built with Tauri 2 + React."
authors = ["Jonas Aasberg <jonas.aasberg@clave.no>"]
license = "GPL-3.0-only"
repository = "https://github.com/jonassaa/platypusgit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "platypusgit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20.4", features = ["vendored-openssl"] }
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-os = "2"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "process"] }
tauri-plugin-log = "2.8.0"
log = "0.4.29"
# E2E-only WebDriver bridge. Optional + feature-gated so it is NOT linked into
# dev/production binaries — it opens a WebDriver server (port 4445) with full
# IPC, so it must never ship. Enabled solely by the `e2e` feature (see
# test:e2e:build). Its `wdio-webdriver:default` permission lives in the e2e
# capability in tauri.e2e.conf.json, not the shared capabilities/default.json.
tauri-plugin-wdio-webdriver = { version = "1.2.0", optional = true }
tauri-plugin-single-instance = "2.4.2"

[features]
# Compile + wire the WebDriver plugin. Set only by the e2e debug build.
e2e = ["dep:tauri-plugin-wdio-webdriver"]

[dev-dependencies]
tempfile = "3"

